# reset-qt-mobile-app

./: .gitignore  CMakeLists.txt  README.md  Reset.qmlproject  Reset.qmlproject.qtds  Reset.qrc  qds.cmake
App/autogen/: environment.h
Reset/: CMakeLists.txt  Constants.qml  qmldir
Reset/designer/: plugin.metainfo
ResetContent/: ActionLibrary.js  App.qml  CMakeLists.txt  HistoryStore.js  InsightEngine.js  Screen01.ui.qml  Screen02.ui.qml  Screen03.ui.qml  Screen04.ui.qml  Screen05.ui.qml  SmartPicker.js
